After CMF 1.6.4

  Bug Fixes

    - Backported test fix from 2.1 branch which suppresses race conditions
      in date-based topic criteria tests.

CMF 1.6.4 (2007/05/15):

  (No changes since 1.6.4-beta)

CMF 1.6.4-beta (2007/04/24):

  Other Changes

    - Switch to using GenericSetup 1.2 final release (From 1.2beta).

  Bug Fixes

    - Fixed test breakage / spew when running on Zope 2.8.

    - Use the property API to get the member specific skin, because
      direct attribute access won't work with PAS based membership.
      (http://dev.plone.org/plone/ticket/5904)

    - Add POST-only protections to security critical methods (see
      http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2007-0240).

    - Fixed DST-driven test breakage in CMFCalendar by adding an optional
      'zone' argument to the DublineCore methods which return string
      rednitions of date metadata.
      (http://www.zope.org/Collectors/CMF/476)

CMF 1.6.3 (2007/02/02)

  Bug Fixes
  
    - Fixed broken PUT handling for CMFCalendar Events
      (http://www.zope.org/Collectors/CMF/458)

CMF 1.6.3-beta (2007/01/17)

  Bug Fixes

    - CMFCalendar: Refactored test setup to fix test breakage for Zope 2.9.

    - CMFDefault: The "Sample CMF Content" GenericSetup profile was 
      registered but missing all of its files and necessary interface 
      declarations in the CMFDefault content classes.
      (http://www.zope.org/Collectors/CMF/453)

    - DCWorkflow: Fixed errors and site breakage on GenericSetup import 
      of transitions with variable expressions set.  They were previously 
      being imported as text rather tha Expressions.

    - CMFCore.DynamicType: Fixed behaviour regarding default view.
      DynamicType was making it impossible to use a Zope3-style
      default view for CMF content types.
      (http://www.zope.org/Collectors/CMF/459)


CMF 1.6.2 (2006/08/15)

  Bug Fixes

    - CMFCore.FSDTMLMethod: Add class-default '_owner', to prevent unintended